# phase-gate-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  agent.md  co_agent.md  imp_agent.md  pyproject.toml  pyrightconfig.json  pytest_out.txt  pytest_output.txt  pytest_output_utf8.txt  pytest_stdout.txt  qa_agent.md  requirements.txt  role_reset_snippets.md  scratch_inspect_mcp.py  template_registry.json  test_debug.txt  test_debug_cycle.txt  test_debug_pr.txt
.agent/: reboot.md
.agents/: mcp_config.json
.agents/rules/: co.agent.md  imp.agent.md  qa.agent.md
.agents/workflows/: end-issue.md  fresh.md  go.md  start-issue.md
.copilot/: session-state.json
.github/: .copilot-instructions.md  copilot-instructions.md
.github/agents/: co.agent.md  co.agent.md.bak  imp.agent.md  qa.agent.md
.github/prompts/: close-issue.prompt.md  create-issue.prompt.md  end-issue.prompt.md  go.prompt.md  implement-cycle.prompt.md  open-issue.prompt.md  start-issue.prompt.md
.pgmcp/: deliverables.json  deliverables.json.bak  quality_state.json  state.json  state.json.bak  template_registry.json
.pgmcp/config/: artifacts.yaml  contracts.yaml  contributors.yaml  enforcement.yaml  issues.yaml  labels.yaml  milestones.yaml  policies.yaml  presentation.yaml  project_structure.yaml  release_manifest.yaml  scaffold_metadata.yaml  scopes.yaml  workflows.yaml  workphases.yaml
.pgmcp/templates/: tier0_base_artifact.jinja2  tier1_base_document.jinja2  tier2_base_typescript.jinja2  tier3_pattern_markdown_status_header.jinja2  tier3_pattern_markdown_version_history.jinja2  tier3_pattern_typescript_dto.jinja2
.phase-gate/: .antigravityignore  .restart_marker  deliverables.json  quality_state.json  state.json  template_registry.json
.phase-gate/config/: artifacts.yaml  contracts.yaml  enforcement.yaml  presentation.yaml  project_structure.yaml  quality.yaml  workflows.yaml
.phase-gate/temp/: ValidationHelper.py  ValidationTestDto.py  issue_0154858f.md  issue_01d925d5.md  issue_1e193d14.md  issue_32243778.md  issue_3a99f705.md  issue_3ebf7534.md  issue_42950755.md  issue_4924b696.md  issue_5024fb5c.md  issue_5d38606a.md  issue_6113f4e6.md  issue_63fb9ef8.md  issue_64132f3d.md  issue_667c9655.md  issue_8ab909a6.md  issue_a48263d3.md  issue_a90aa994.md  issue_acb70ab2.md  issue_cb6b2883.md  issue_d77d371b.md  issue_fa90a838.md  pr_290c8751.md  pr_ad7f30cc.md  validation-test-design.md  validation_test_worker.py
.st3/: .restart_marker  deliverables.json  quality_state.json  state.json
.st3/config/: contracts.yaml  enforcement.yaml  phase_contracts.yaml  project_structure.yaml  workflows.yaml
.st3/temp/: commit_message_69afb134.txt  commit_message_ba6bc6c2.txt  issue231-pr.md  issue253-pr-body.md  issue_1fddeed8.md  mermaid.md  pr_0a3fbb1f.md  pr_39abd268.md  pr_600097f9.md  pr_7962e291.md  pr_98151760.md  pr_9c99beeb.md  pr_body_283.md  pr_fd5b6fbc.md
docs/: SESSIE_OVERDRACHT_20260520_C5_QA.md
docs/architecture/: TEMPLATE_LIBRARY.md  VSCODE_AGENT_ORCHESTRATION.md
docs/archive/: git_config_customization.md
docs/coding_standards/: ARCHITECTURE_PRINCIPLES.md  DOCUMENTATION_STANDARD.md  QUALITY_GATES.md  README.md
docs/development/: MAINTENANCE_SCRIPTS.md  schema-template-maintenance.md
docs/manuals/: README.md  architecture.md  github-setup.md  phase-workflows.md  user-guide.md
docs/mcp_server/: ARCHITECTURE.md  GITHUB_SETUP.md  IMPLEMENTATION_PLAN.md  PHASE_WORKFLOWS.md  README.md  RESOURCES.md  TOOLS.md  USER_GUIDE.md
docs/reference/: MCP_TOOLS.md  README.md  TEMPLATE_LIBRARY_PATTERNS.md  (+12 more)
mcp_server/: bootstrap.py  cli.py  server.py
scratch/: inspect_file.py  inspect_issue.py  update_docs.py
scripts/: build_package.py
temp/: am_diff.txt  artifacts_diff.txt  ps_diff.txt  server_diff.txt  siv_diff.txt  test-design-doc.md  test-generic-doc.md  test_output.txt  tv_diff.txt  validation_report.md
tests/: conftest.py
(+885 files in other folders)
