[project]
name = "phase-gate-mcp"
version = "1.0.0"
description = "Phase-Gate MCP Server — AI-assisted workflow orchestration with phase, cycle, and quality gate enforcement"
authors = [
    {name = "Phase Gate Team"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "mcp>=1.0.0",
    "gitpython>=3.1.0",
    "PyGithub>=2.0.0",
    "jinja2>=3.1.2",
]

[project.scripts]
pgmcp = "mcp_server.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "black>=23.9.0",
    "pyright>=1.1.386",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*"]

[tool.setuptools.package-data]
mcp_server = ["assets/**/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/mcp_server"]
norecursedirs = [".git", ".vscode", "__pycache__", "docs", "results", "source_data", "frontends", "locales"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-n", "auto",
]
# Coverage decoupled from default pytest runs per TODO 6 (Issue #131)
# Coverage is enforced separately via Gate 6 (branch coverage >= 90%)
# To run with coverage: pytest --cov=mcp_server --cov-branch --cov-fail-under=90
markers = [
    "slow: Fully hermetic tests that spawns real subprocesses or git operations on tmp_path. Enabled by default; skip via -m 'not slow' for fast dev-runs.",
    "manual: Manual tests requiring full environment setup and explicit enablement (RUN_MANUAL_TESTS=1)",
    "asyncio: Mark async tests for pytest-asyncio",
]
asyncio_mode = "strict"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# IDE baseline configuration - balanced strictness for developer productivity
# CI/CD overrides in .pgmcp/config/quality.yaml for 10/10 enforcement
select = [
    "E",   # pycodestyle errors - includes E501 (line-too-long)
    "W",   # pycodestyle warnings - includes W291/W292/W293 (whitespace)
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade - includes UP034 (extraneous-parens)
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "T20", # flake8-print
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PLC", # pylint-convention - includes PLC0415 (import-outside-top-level) for Gate 2
]
ignore = [
    "ANN401", # IDE only - allow Any for **kwargs patterns
    "ARG002", # IDE only - allow unused method args for interface compliance
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",  # No type annotations required in tests
    "ARG",  # Unused arguments OK in fixtures
    "N806", # Variable names can be uppercase (MockManager pattern)
    # E501 removed - tests MUST comply with 100-char limit per QUALITY_GATES.md
    "SIM117", # Nested with OK in tests
    "SIM105", # try-except-pass OK in tests
]

[tool.pyright]
# Pydantic v2 integration - prevents FieldInfo type inference issues
reportFunctionMemberAccess = false

